# aws-emr-utilities

mcp-servers/: README.md
mcp-servers/emr-serverless-spark-advisor/: Dockerfile  README.md  deploy.sh  emr_recommender.py  lambda_handler.py  requirements.txt  spark_advisor_mcp.py  spark_extractor.py
mcp-servers/orioniq-spark-deployment-option-recommender/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING.md  SKILL.md  config.yaml  main.py  mcp_configuration_examples.md  orioniq_cli.py  pyproject.toml  requirements.txt
mcp-servers/orioniq-spark-deployment-option-recommender/evals/: test_evals.py
mcp-servers/orioniq-spark-deployment-option-recommender/src/: combined_emr_advisor_mcp.py  emr_advisor_agent_v2.py  emr_advisor_strands_agent.py  emr_serverless_estimator.py  glue_cost_estimator.py  region_mapping.yaml  report_generator.py  scoring_config.yaml
mcp-servers/orioniq-spark-deployment-option-recommender/templates/: EMR_Analysis_Report_V3.html  EMR_Analysis_Report_v2.html
utilities/EMR-Serverless-Config-Advisor/: README.md  emr_recommender.py  emr_recommender_dual_mode.py  emr_recommender_local_s3.py  pipeline_wrapper.py  spark_extractor.py  spark_processor.py  write_to_iceberg.py
utilities/EMR-Serverless-Config-Advisor/mcp-server/: README.md  spark_advisor_mcp.py
utilities/hbase-cross-region-copy/: README.md  hbase-cross-region-copy-all-tables.sh  hbase-cross-region-copy.sh
utilities/spark-s3express-shuffle-manager/: README.md
(+1 files in other folders)
