[project]
name = "hack-151-orioniq-emr-deployment-option-recommender"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "faiss-cpu>=1.12.0",
    "ollama>=0.5.2",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "sarif-om>=1.0.4",
    "sentence-transformers>=5.1.0",
    "strands-agents>=1.6.0",
    "strands-agents-tools>=0.2.5",
]
